--- a/styles/style.css
+++ b/styles/style.css
@@ -758,3 +758,232 @@ strong {
         transform: translatey(20px);
     }
 }
+
+/* END OF CONTACT STYLING */
+
+/* START OF SERVICES STYLING */
+
+.container {
+    max-width: 1140px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 3rem 0;
+    min-height: 100vh;
+    display: grid;
+    place-items: center;
+}
+
+/*==================== SERVICE CARD ====================*/
+.card__container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+    width: 100%;
+    max-width: 90%;
+    margin: 40px auto;
+}
+.card__bx {
+    --bg-clr: #282828;
+    --txt-clr: #ffffff;
+    --btn-txt-clr: #333333;
+    --transition: all 0.5s;
+
+    font-family: 'Poppins', sans-serif;
+    height: 400px;
+    width: 300px;
+    overflow: hidden;
+    border-radius: 20px;
+    border-top-left-radius: 70px;
+    position: relative;
+    overflow: hidden;
+    background: var(--clr);
+    transition: var(--transition);
+}
+.card__1 {
+    --clr: #249eff;
+}
+.card__2 {
+    --clr: #ff1f6b;
+}
+.card__3 {
+    --clr: #98ff21;
+}
+.card__bx .card__data {
+    position: absolute;
+    inset: 10px;
+    border-radius: 10px;
+    background: var(--bg-clr);
+}
+.card__bx .card__data .card__icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-bottom-right-radius: 50%;
+    height: 140px;
+    width: 140px;
+    background: var(--clr);
+}
+.card__bx .card__data .card__icon::before {
+    content: '';
+    position: absolute;
+    bottom: -30px;
+    left: 0;
+    height: 30px;
+    width: 30px;
+    border-top-left-radius: 30px;
+    background: transparent;
+    box-shadow: -5px -5px 0 5px var(--clr);
+}
+.card__bx .card__data .card__icon::after {
+    content: '';
+    position: absolute;
+    right: -30px;
+    top: 0;
+    height: 30px;
+    width: 30px;
+    border-top-left-radius: 30px;
+    background: transparent;
+    box-shadow: -5px -5px 0 5px var(--clr);
+}
+.card__bx .card__data .card__icon .card__icon-bx {
+    position: absolute;
+    inset: 10px;
+    border-radius: 10px;
+    border-top-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 60px;
+    background: var(--bg-clr);
+    color: var(--clr);
+}
+.card__bx:hover .card__data .card__icon .card__icon-bx {
+    background: var(--clr);
+    color: var(--txt-clr);
+    transition: var(--transition);
+}
+.card__bx .card__data .card__content {
+    position: absolute;
+    top: 150px;
+    padding: 20px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 15px;
+    color: var(--txt-clr);
+}
+.card__bx .card__data .card__content h3 {
+    font-size: 24px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+.card__bx .card__data .card__content p {
+    font-size: 14px;
+    opacity: 0.75;
+}
+.card__bx .card__data .card__content a {
+    display: inline-flex;
+    align-self: center;
+    padding: 10px 25px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 30px;
+    border: 2px solid var(--clr);
+    color: var(--btn-txt-clr);
+    background: var(--clr);
+    transition: var(--transition);
+}
+.card__bx .card__data .card__content a:hover {
+    background: transparent;
+    color: var(--clr);
+}
+
+@media screen and (min-width: 968px) {
+    :root {
+        --normal-font-size: 1rem;
+    }
+}
+
+/* END OF SERVICE CARD */
+
+/* START OF MORE ABOUT ME */
+
+.design-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  min-height: 100vh;
+  padding: 100px 0;
+  font-family: Jost;
+}
+
+.design {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.timeline {
+  width: 80%;
+  height: auto;
+  max-width: 800px;
+  margin: 0 auto;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.timeline-content {
+  padding: 20px;
+  background: #3a3838;
+  -webkit-box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #242424;
+          box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #242424;
+  border-radius: 5px;
+  color: white;
+  padding: 1.75rem;
+  transition: 0.4s ease;
+  overflow-wrap: break-word !important;
+  margin: 1rem;
+  margin-bottom: 20px;
+  border-radius: 6px;
+}
+
+.timeline-component {
+  margin: 0px 20px 20px 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .timeline {
+    display: grid;
+    grid-template-columns: 1fr 3px 1fr;
+  }
+  .timeline-middle {
+    position: relative;
+    background-image: linear-gradient(45deg, #F27121, #E94057, #8A2387);
+    width: 3px;
+    height: 100%;
+  }
+  .main-middle {
+    opacity: 0;
+  }
+  .timeline-circle {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-image: linear-gradient(45deg, #F27121, #E94057, #8A2387);
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+}
+/* END OF MORE ABOUT ME */
